[Fix] Footer has wrong color

--- a/src/styles.css
+++ b/src/styles.css
@@ -382,7 +382,7 @@ p {
 .Footer {
   text-align: center;
   padding: 50px;
-  background-color: #3e5c76;
+  background-color: #f97068;
 }
 .Footer a {
   color: #aff;
